tests/suite/analyze/snapshots/suite__analyze__lazy_code_motion__basic_loop_available.snap
---
source: tests/suite/analyze/lazy_code_motion.rs
assertion_line: 71
expression: available
---

                                      basic_loop


  +---------------------------------------------------------------------------------+
  |                                                                                 |
  |                                 +--------------------------------------------+  |
  |                                 |                   enter:                   |  |
  |                                 | {}                                         |  |
  |                                 | (MOVE (TEMP _a) (CONST 0))                 |  |
  |                                 | {}                                         |  |
  |                                 | (JUMP r#loop)                              |  |
  |                                 | {(ADD (TEMP _a) (TEMP _b))}                |  |
  |                                 +--------------------------------------------+  |
  |                                   |                                             |
  |                                   |                                             |
  |                                   v                                             |
+-----------------------------+     +--------------------------------------------+  |
|                             |     |                  r#loop:                   |  |
|           split:            |     | {(ADD (TEMP _a) (TEMP _b))}                |  |
| {(ADD (TEMP _a) (TEMP _b))} |     | (MOVE (TEMP _c) (ADD (TEMP _a) (TEMP _b))) |  |
| (JUMP r#loop)               |     | {(ADD (TEMP _a) (TEMP _b))}                |  |
| {(ADD (TEMP _a) (TEMP _b))} |     | (CJUMP (EQ (CONST 0) (CONST 0)) split)     |  |
|                             | <-- | {(ADD (TEMP _a) (TEMP _b))}                | <+
+-----------------------------+     +--------------------------------------------+
                                      |
                                      |
                                      v
                                    +--------------------------------------------+
                                    |                fallthrough:                |
                                    | {(ADD (TEMP _a) (TEMP _b))}                |
                                    | (JUMP exit)                                |
                                    | {(ADD (TEMP _a) (TEMP _b))}                |
                                    +--------------------------------------------+
                                      |
                                      |
                                      v
                                    +--------------------------------------------+
                                    |                   exit:                    |
                                    | {(ADD (TEMP _a) (TEMP _b))}                |
                                    +--------------------------------------------+

