tests/suite/analyze/snapshots/suite__analyze__lazy_code_motion__knoop_ruthing_steffen_anticipated.snap
---
source: tests/suite/analyze/lazy_code_motion.rs
assertion_line: 86
expression: anticipated
---

                                                                                                    knoop_ruthing_steffen

                                                                                                           +--------------------------------------------+
                                                                                                           |                   enter:                   |
                                                                                                           | {}                                         |
                                                                                                           | (JUMP _1)                                  |
                                                                                                           | {}                                         |
                                                                                                           +--------------------------------------------+
                                                                                                             |
                                                                                                             |
                                                                                                             v
                                                        +--------------------------------------------+     +--------------------------------------------+
                                                        |                    _4:                     |     |                    _1:                     |
                                                        | {}                                         |     | {}                                         |
                                                        | (JUMP _5)                                  |     | (CJUMP (EQ (CONST 0) (CONST 0)) _2)        |
                                                        | {}                                         | <-- | {}                                         |
                                                        +--------------------------------------------+     +--------------------------------------------+
                                                          |                                                  |
                                                          |                                                  |
                                                          |                                                  v
                                                          |                                                +--------------------------------------------+
                                                          |                                                |                    _2:                     |
                                                          |                                                | {}                                         |
                                                          |                                                | (MOVE (TEMP _a) (TEMP _c))                 |
                                                          |                                                | {(ADD (TEMP _a) (TEMP _b))}                |
                                                          |                                                | (JUMP _3)                                  |
                                                          |                                                | {(ADD (TEMP _a) (TEMP _b))}                |
                                                          |                                                +--------------------------------------------+
                                                          |                                                  |
                                                          |                                                  |
                                                          |                                                  v
                                                          |                                                +--------------------------------------------+
                                                          |                                                |                    _3:                     |
                                                          |                                                | {(ADD (TEMP _a) (TEMP _b))}                |
                                                          |                                                | (MOVE (TEMP _x) (ADD (TEMP _a) (TEMP _b))) |
                                                          |                                                | {}                                         |
                                                          |                                                | (JUMP _5)                                  |
                                                          |                                                | {}                                         |
                                                          |                                                +--------------------------------------------+
                                                          |                                                  |
                                                          |                                                  |
                                                          |                                                  v
                                                          |                                                +--------------------------------------------+     +------------+
                                                          |                                                |                    _5:                     |     |    _7:     |
                                                          |                                                | {}                                         |     | {}         |
                                                          |                                                | (CJUMP (EQ (CONST 0) (CONST 0)) _6)        |     | (JUMP _18) |
                                                          +----------------------------------------------> | {}                                         | --> | {}         |
                                                                                                           +--------------------------------------------+     +------------+
                                                                                                             |                                                  |
                                                                                                             |                                                  |
                                                                                                             v                                                  |
                                                        +--------------------------------------------+     +--------------------------------------------+       |
                                                        |                    _9:                     |     |                    _6:                     |       |
                                                        | {(ADD (TEMP _a) (TEMP _b))}                |     | {(ADD (TEMP _a) (TEMP _b))}                |       |
                                                        | (JUMP _12)                                 |     | (CJUMP (EQ (CONST 0) (CONST 0)) _8)        |       |
                                                        | {(ADD (TEMP _a) (TEMP _b))}                | <-- | {(ADD (TEMP _a) (TEMP _b))}                |       |
                                                        +--------------------------------------------+     +--------------------------------------------+       |
                                                          |                                                  |                                                  |
                                                          |                                                  |                                                  |
                                                          v                                                  v                                                  |
     +--------------------------------------------+     +--------------------------------------------+     +--------------------------------------------+       |
     |                    _17:                    |     |                                            |     |                                            |       |
     | {(ADD (TEMP _a) (TEMP _b))}                |     |                    _12:                    |     |                    _8:                     |       |
     | (MOVE (TEMP _x) (ADD (TEMP _a) (TEMP _b))) |     | {(ADD (TEMP _a) (TEMP _b))}                |     | {(ADD (TEMP _a) (TEMP _b))}                |       |
     | {}                                         |     | (CJUMP (EQ (CONST 0) (CONST 0)) _17)       |     | (JUMP _11)                                 |       |
     | (JUMP _18)                                 |     | {(ADD (TEMP _a) (TEMP _b))}                |     | {(ADD (TEMP _a) (TEMP _b))}                |       |
     | {}                                         | <-- |                                            |     |                                            |       |
     +--------------------------------------------+     +--------------------------------------------+     +--------------------------------------------+       |
       |                                                  |                                                  |                                                  |
       |                                                  |                                                  |                                                  |
       |                                                  v                                                  v                                                  |
       |                                                +--------------------------------------------+     +--------------------------------------------+       |                +--------------------------------------------+
       |                                                |                    _15:                    |     |                                            |       |                |                    _10:                    |
       |                                                | {(ADD (TEMP _a) (TEMP _b))}                |     |                    _11:                    |       |                | {(ADD (TEMP _a) (TEMP _b))}                |
       |                                                | (MOVE (TEMP _y) (ADD (TEMP _a) (TEMP _b))) |     | {(ADD (TEMP _a) (TEMP _b))}                |       |                | (MOVE (TEMP _y) (ADD (TEMP _a) (TEMP _b))) |
       |                                                | {(ADD (TEMP _a) (TEMP _b))}                |     | (CJUMP (EQ (CONST 0) (CONST 0)) _14)       |       |                | {(ADD (TEMP _a) (TEMP _b))}                |
       |                                                | (JUMP _16)                                 |     | {(ADD (TEMP _a) (TEMP _b))}                |       |                | (JUMP _11)                                 |
       |                                                | {(ADD (TEMP _a) (TEMP _b))}                |  +> |                                            | ------+--------------> | {(ADD (TEMP _a) (TEMP _b))}                |
       |                                                +--------------------------------------------+  |  +--------------------------------------------+       |                +--------------------------------------------+
       |                                                  |                                             |    |                                                  |                  |
       |                                                  |                                             |    |                                                  |                  |
       |                                                  |                                             |    v                                                  |                  |
       |                                                  |                                             |  +--------------------------------------------+       |                  |
       |                                                  |                                             |  |                    _14:                    |       |                  |
       |                                                  |                                             |  | {(ADD (TEMP _a) (TEMP _b))}                |       |                  |
       |                                                  |                                             |  | (JUMP _16)                                 |       |                  |
       |                                                  |                                             |  | {(ADD (TEMP _a) (TEMP _b))}                |       |                  |
       |                                                  |                                             |  +--------------------------------------------+       |                  |
       |                                                  |                                             |    |                                                  |                  |
  +----+--------------------------------------------------+---------------------------------------------+    |                                                  |                  |
  |    |                                                  |                                                  v                                                  |                  |
  |    |                                                  |                                                +--------------------------------------------+       |                  |
  |    |                                                  |                                                |                    _16:                    |       |                  |
  |    |                                                  |                                                | {(ADD (TEMP _a) (TEMP _b))}                |       |                  |
  |    |                                                  |                                                | (MOVE (TEMP _x) (ADD (TEMP _a) (TEMP _b))) |       |                  |
  |    |                                                  |                                                | {}                                         |       |                  |
  |    |                                                  |                                                | (JUMP _18)                                 |       |                  |
  |    |                                                  +----------------------------------------------> | {}                                         |       |                  |
  |    |                                                                                                   +--------------------------------------------+       |                  |
  |    |                                                                                                     |                                                  |                  |
  |    |                                                                                                     |                                                  |                  |
  |    |                                                                                                     v                                                  |                  |
  |    |                                                                                                   +--------------------------------------------+       |                  |
  |    |                                                                                                   |                    _18:                    |       |                  |
  |    |                                                                                                   | {}                                         |       |                  |
  |    |                                                                                                   | (JUMP exit)                                |       |                  |
  |    +-------------------------------------------------------------------------------------------------> | {}                                         | <-----+                  |
  |                                                                                                        +--------------------------------------------+                          |
  |                                                                                                          |                                                                     |
  |                                                                                                          |                                                                     |
  |                                                                                                          v                                                                     |
  |                                                                                                        +--------------------------------------------+                          |
  |                                                                                                        |                   exit:                    |                          |
  |                                                                                                        | {}                                         |                          |
  |                                                                                                        +--------------------------------------------+                          |
  |                                                                                                                                                                                |
  +--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+

